feat(1864): update traces dto to add locked associations